feat: 结构优化与示例
