# examples/simple/internal/model/model.go
@@ -1,0 +1,6 @@
+package model
+
+type AuthInfo struct {
+	UserID   int64
+	Username string
+}
